Fixing card wage icon alignment

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,7 +17,7 @@
 }
 
 .cards-EmployeeCard-salary {
-    font-size: 27px;
+    font-size: 24px;
 }
 
 .cards-EmployeeCard-image {
